--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
         <li><a href="page2.html">Page 2</a></li>
-        <li><a href="page3.html">Page 3</a></li>
+        <li><a href="ContactUs.html">Contact Us</a></li>
       </ul>
     </div>
   </div>
