--- a/page2.html
+++ b/page2.html
@@ -17,7 +17,7 @@
 <body>
 
 <div class="jumbotron text-center" style="margin-bottom:0">
-  <h1>My First Bootstrap Page</h1>
+  <h1>My Second Bootstrap Page</h1>
   <p>Resize this responsive page to see the effect!</p> 
 </div>
 
